complete for big screen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!--google font link roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!--  google font link  hind -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -81,9 +95,362 @@
       </section>
 
       <!-- card section -->
-      <section class="bg-[#4A4A4A]">
-        <div></div>
-        <div></div>
+      <section
+        class="w-11/12 mx-auto py-10 grid grid-cols-12 gap-8 bg-slate-200 h[100vh] w-[1920px] p-10"
+      >
+        <section class="bg-slate-200 grid grid-cols-3 gap-5 col-span-9">
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/emergency.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">জাতীয় জরুরি সেবা</h3>
+                <p class="roboto text-[#5C5C5C]">National Emergency</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">999</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  সার্বজনীন
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/police.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">পুলিশ</h3>
+                <p class="roboto text-[#5C5C5C]">Police</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">999</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  পুলিশ
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/fire-service.png" alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">ফায়ার সার্ভিস</h3>
+                <p class="roboto text-[#5C5C5C]">Fire Service</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">999</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  ফায়ার
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/ambulance.png" alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">অ্যাম্বুলেন্স</h3>
+                <p class="roboto text-[#5C5C5C]">Ambulance</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">1994-999999</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  স্বাস্থ্য
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/emergency.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">নারী ও শিশু সহায়তা</h3>
+                <p class="roboto text-[#5C5C5C]">Women & Child Helpline</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">109</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  সহায়তা
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/emergency.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">দুদক</h3>
+                <p class="roboto text-[#5C5C5C]">Anti-Corruption</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">106</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  সরকারি
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/emergency.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">বিদ্যুৎ বিভ্রাট</h3>
+                <p class="roboto text-[#5C5C5C]">Electricity Outage</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">16216</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  বিদ্যুৎ
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/brac.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">ব্র্যাক</h3>
+                <p class="roboto text-[#5C5C5C]">Brac</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">16445</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  এনজিও
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+          <div class="p-5 bg-white rounded-lg shadow-md">
+            <div class="          ">
+              <div class="flex items-center justify-between mb-3">
+                <figure class="bg-[#FFE3E2] p-3 w-14 h-14 rounded-lg">
+                  <img src="./assets/Bangladesh-Railway.png " alt="" />
+                </figure>
+                <span class=""><i class="fa-regular fa-heart"></i></span>
+              </div>
+              <div class="my-5">
+                <h3 class="text-2xl font-bold hind">বাংলাদেশ রেলওয়ে</h3>
+                <p class="roboto text-[#5C5C5C]">Bangladesh Railway</p>
+              </div>
+              <div class="mb-5">
+                <h2 class="text-3xl font-bold roboto">163</h2>
+                <p
+                  class="bg-[#F2F2F2] text-[#5C5C5C] py-3 px-6 w-29 rounded-full"
+                >
+                  পরিবহন
+                </p>
+              </div>
+              <button
+                class="py-3 px-14 border-gray-300 rounded-lg text-[#5C5C5C] roboto w-[49%]"
+              >
+                <i class="fa-solid fa-copy"></i> Copy
+              </button>
+              <button
+                class="py-3 px-14 bg-green-600 border-green-500 rounded-lg text-white roboto w-[49%]"
+              >
+                <i class="fa-solid fa-phone"></i> Call
+              </button>
+            </div>
+          </div>
+        </section>
+
+        <!-- section history -->
+
+        <section class="bg-white col-span-3 shadow-md p-6 rounded-lg">
+          <div class="flex items-center justify-between mb-5">
+            <div class="flex items-center gap-2">
+              <i class="fa-regular fa-clock"></i>
+              <h2 class="roboto font-bold text-xl">Call History</h2>
+            </div>
+            <div>
+              <button
+                class="bg-[#00a63e] w-32 h-14 p-[12px] rounded-full text-white font-bold text-lg"
+              >
+                Clear
+              </button>
+            </div>
+          </div>
+          <div
+            class="bg-[#FAFAFA] flex items-center justify-between p-4 rounded-md mb-2"
+          >
+            <div>
+              <h2 class="roboto text-xl font-semibold">জাতীয় জরুরি সেবা</h2>
+              <p class="text-[#5C5C5C] font-semibold roboto">999</p>
+            </div>
+            <div class="text-[#5C5C5C] font-semibold roboto">11:36:58 AM</div>
+          </div>
+          <div
+            class="bg-[#FAFAFA] flex items-center justify-between p-4 rounded-md mb-2"
+          >
+            <div>
+              <h2 class="roboto text-xl font-semibold">জাতীয় জরুরি সেবা</h2>
+              <p class="text-[#5C5C5C] font-semibold roboto">999</p>
+            </div>
+            <div class="text-[#5C5C5C] font-semibold roboto">11:36:58 AM</div>
+          </div>
+          <div
+            class="bg-[#FAFAFA] flex items-center justify-between p-4 rounded-md mb-2"
+          >
+            <div>
+              <h2 class="roboto text-xl font-semibold">জাতীয় জরুরি সেবা</h2>
+              <p class="text-[#5C5C5C] font-semibold roboto">999</p>
+            </div>
+            <div class="text-[#5C5C5C] font-semibold roboto">11:36:58 AM</div>
+          </div>
+          <div
+            class="bg-[#FAFAFA] flex items-center justify-between p-4 rounded-md mb-2"
+          >
+            <div>
+              <h2 class="roboto text-xl font-semibold">জাতীয় জরুরি সেবা</h2>
+              <p class="text-[#5C5C5C] font-semibold roboto">999</p>
+            </div>
+            <div class="text-[#5C5C5C] font-semibold roboto">11:36:58 AM</div>
+          </div>
+          <div
+            class="bg-[#FAFAFA] flex items-center justify-between p-4 rounded-md mb-2"
+          >
+            <div>
+              <h2 class="roboto text-xl font-semibold">জাতীয় জরুরি সেবা</h2>
+              <p class="text-[#5C5C5C] font-semibold roboto">999</p>
+            </div>
+            <div class="text-[#5C5C5C] font-semibold roboto">11:36:58 AM</div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
