--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Service</title>
+
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <!-- css link -->
     <link rel="stylesheet" href="./style/style.css" />
     <!--  google font link  inter -->
